k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-insurance-api
  namespace: pet-insurance
  labels:
    app: pet-insurance-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-insurance-api
  template:
    metadata:
      labels:
        app: pet-insurance-api
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3000'
        prometheus.io/path: '/metrics'
    spec:
      containers:
        - name: pet-insurance-api
          image: your-dockerhub-user/pet-insurance-devops:IMAGE_TAG
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              memory: '128Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '250m'
