k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-insurance-ingress
  namespace: pet-insurance
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pet-insurance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-insurance-api
                port:
                  number: 80
